--- a/menu.html
+++ b/menu.html
@@ -104,33 +104,11 @@
       margin: 0 auto;
       display: flex;
       flex-direction: column;
-      gap: 1mm; /* 1mm spacing between menu items */
+      gap: 0; /* Remove gap, use margin on cards instead */
     }
     .category-section {
-      margin-bottom: 18px;
+      margin-bottom: 28px;
       scroll-margin-top: 90px;
-    }
-    @media (max-width: 700px) {
-      .container-bg {
-        padding: 10px 1vw 18px 1vw;
-      }
-      .container {
-        gap: 1mm;
-      }
-      .category-section {
-        margin-bottom: 10px;
-      }
-    }
-    @media (max-width: 500px) {
-      .container-bg {
-        padding: 6px 0 10px 0;
-      }
-      .container {
-        gap: 1mm;
-      }
-      .category-section {
-        margin-bottom: 7px;
-      }
     }
     .category-title {
       font-size: 1.5rem;
@@ -157,18 +135,22 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      padding: 10px 12px;
-      min-height: 90px;
+      padding: 14px 16px;
+      min-height: 100px;
       color: white;
-      margin: 0 auto;
+      margin: 0 auto 18px auto; /* Add bottom margin for spacing */
       box-sizing: border-box;
-      gap: 12px;
+      gap: 16px;
+    }
+    /* Remove bottom margin for last card in each section */
+    .category-section .menu-card:last-child {
+      margin-bottom: 0;
     }
     .menu-card img {
-      width: 90px;
-      height: 90px;
+      width: 100px;
+      height: 100px;
       object-fit: cover;
-      border-radius: 12px;
+      border-radius: 14px;
       background: #e3eafc;
       box-shadow: 0 2px 8px rgba(31,38,135,0.08);
       flex-shrink: 0;
@@ -346,6 +328,7 @@
       line-height: 1;
       pointer-events: none;
     }
+    /* Responsive styles */
     @media (max-width: 700px) {
       .lux-box {
         font-size: 1.5rem;
@@ -356,32 +339,27 @@
         padding: 10px 1vw 18px 1vw;
       }
       .container {
-        gap: 1mm;
-      }
-      .category-bar {
-        gap: 8px;
-        padding: 8px 0 8px 0;
-        border-radius: 12px;
-      }
-      .category-btn {
-        padding: 7px 12px;
-        font-size: 0.98rem;
+        gap: 0;
       }
       .menu-card {
-        padding: 7px 6px;
-        min-height: 70px;
-        gap: 7px;
+        padding: 12px 6px;
+        min-height: 110px;
+        gap: 10px;
+        margin-bottom: 14px;
       }
       .menu-card img {
-        width: 70px;
-        height: 70px;
-        border-radius: 8px;
+        width: 90px;
+        height: 90px;
+        border-radius: 12px;
       }
       .menu-card button {
-        width: 54px;
-        height: 54px;
-        font-size: 2.1rem;
-        margin-left: 5px;
+        width: 40px;
+        height: 40px;
+        font-size: 1.3rem;
+        margin-left: 6px;
+      }
+      .category-section .menu-card:last-child {
+        margin-bottom: 0;
       }
       #cart-section {
         padding: 0.5rem;
@@ -413,27 +391,31 @@
         padding: 6px 0 10px 0;
       }
       .container {
-        gap: 1mm;
+        gap: 0;
+      }
+      .menu-card {
+        padding: 10px 2px;
+        min-height: 100px;
+        gap: 8px;
+        margin-bottom: 12px;
+      }
+      .menu-card img {
+        width: 80px;
+        height: 80px;
+        border-radius: 10px;
+      }
+      .menu-card button {
+        width: 32px;
+        height: 32px;
+        font-size: 1.1rem;
+        margin-left: 4px;
+      }
+      .category-section .menu-card:last-child {
+        margin-bottom: 0;
       }
       .category-title {
         font-size: 1.2rem;
         margin: 14px 0 6px 0;
-      }
-      .menu-card {
-        padding: 4px 2px;
-        min-height: 60px;
-        gap: 4px;
-      }
-      .menu-card img {
-        width: 54px;
-        height: 54px;
-        border-radius: 6px;
-      }
-      .menu-card button {
-        width: 54px;
-        height: 54px;
-        font-size: 2.1rem;
-        margin-left: 3px;
       }
       #cart-section {
         padding: 0.4rem;
