--- a/menu.html
+++ b/menu.html
@@ -100,11 +100,11 @@
     }
     .container {
       width: 100%;
-      max-width: 700px;
+      max-width: 500px; /* reduced width */
       margin: 0 auto;
       display: flex;
       flex-direction: column;
-      gap: 0; /* Remove gap, use margin on cards instead */
+      gap: 0;
     }
     .category-section {
       margin-bottom: 28px;
@@ -138,11 +138,10 @@
       padding: 14px 16px;
       min-height: 100px;
       color: white;
-      margin: 0 auto 18px auto; /* Add bottom margin for spacing */
+      margin: 0 auto 18px auto;
       box-sizing: border-box;
       gap: 16px;
     }
-    /* Remove bottom margin for last card in each section */
     .category-section .menu-card:last-child {
       margin-bottom: 0;
     }
@@ -185,9 +184,9 @@
       color: #fff;
       border: none;
       border-radius: 50%;
-      width: 48px;
-      height: 48px;
-      font-size: 1.8rem;
+      width: 64px;      /* larger */
+      height: 64px;     /* larger */
+      font-size: 2.5rem;/* larger */
       font-weight: bold;
       cursor: pointer;
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
@@ -299,13 +298,13 @@
       bottom: 32px;
       right: 40px;
       z-index: 200;
-      font-size: 2.6rem;
+      font-size: 1.3rem; /* 0.5x smaller */
       background: #005f73;
       color: #fff;
       border: none;
       border-radius: 50%;
-      width: 70px;
-      height: 70px;
+      width: 35px;      /* 0.5x smaller */
+      height: 35px;     /* 0.5x smaller */
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
       cursor: pointer;
       display: flex;
@@ -315,15 +314,15 @@
     #cart-badge {
       display: none;
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: 4px;
+      right: 4px;
       background: #ff5252;
       color: #fff;
       border-radius: 50%;
-      padding: 2px 8px;
-      font-size: 1.2rem;
+      padding: 1px 5px;
+      font-size: 0.8rem;
       font-weight: bold;
-      min-width: 26px;
+      min-width: 16px;
       text-align: center;
       line-height: 1;
       pointer-events: none;
@@ -339,7 +338,7 @@
         padding: 10px 1vw 18px 1vw;
       }
       .container {
-        gap: 0;
+        max-width: 98vw;
       }
       .menu-card {
         padding: 12px 6px;
@@ -348,37 +347,31 @@
         margin-bottom: 14px;
       }
       .menu-card img {
-        width: 90px;
-        height: 90px;
-        border-radius: 12px;
+        width: 110px;
+        height: 110px;
+        border-radius: 14px;
       }
       .menu-card button {
-        width: 40px;
-        height: 40px;
-        font-size: 1.3rem;
+        width: 56px;
+        height: 56px;
+        font-size: 2.1rem;
         margin-left: 6px;
       }
       .category-section .menu-card:last-child {
         margin-bottom: 0;
       }
-      #cart-section {
-        padding: 0.5rem;
-        max-height: 200px;
-        min-width: 90vw;
-        max-width: 98vw;
-      }
       #cart-toggle-btn {
+        width: 30px;
+        height: 30px;
+        font-size: 1.1rem;
         bottom: 18px;
         right: 10px;
-        width: 90px;
-        height: 90px;
-        font-size: 3.2rem;
       }
       #cart-badge {
-        top: 8px;
-        right: 8px;
-        font-size: 1.3rem;
-        min-width: 28px;
+        top: 2px;
+        right: 2px;
+        font-size: 0.7rem;
+        min-width: 13px;
       }
     }
     @media (max-width: 500px) {
@@ -391,7 +384,7 @@
         padding: 6px 0 10px 0;
       }
       .container {
-        gap: 0;
+        max-width: 100vw;
       }
       .menu-card {
         padding: 10px 2px;
@@ -400,14 +393,14 @@
         margin-bottom: 12px;
       }
       .menu-card img {
-        width: 80px;
-        height: 80px;
-        border-radius: 10px;
+        width: 100px;
+        height: 100px;
+        border-radius: 12px;
       }
       .menu-card button {
-        width: 32px;
-        height: 32px;
-        font-size: 1.1rem;
+        width: 48px;
+        height: 48px;
+        font-size: 1.7rem;
         margin-left: 4px;
       }
       .category-section .menu-card:last-child {
@@ -417,24 +410,18 @@
         font-size: 1.2rem;
         margin: 14px 0 6px 0;
       }
-      #cart-section {
-        padding: 0.4rem;
-        max-height: 180px;
-        min-width: 90vw;
-        max-width: 98vw;
-      }
       #cart-toggle-btn {
+        width: 24px;
+        height: 24px;
+        font-size: 0.8rem;
         bottom: 10px;
         right: 5px;
-        width: 90px;
-        height: 90px;
-        font-size: 3.2rem;
       }
       #cart-badge {
-        top: 6px;
-        right: 6px;
-        font-size: 1.3rem;
-        min-width: 24px;
+        top: 1px;
+        right: 1px;
+        font-size: 0.6rem;
+        min-width: 10px;
       }
     }
   </style>
