--- a/shop-list.html
+++ b/shop-list.html
@@ -21,9 +21,8 @@
       position: fixed;
       top: 0; left: 0;
       width: 100vw; height: 100vh;
-      background: white;  /* Changed to white like Grab */
+      background: white;
       z-index: -1;
-      /* Removed transform and will-change to prevent flickering */
     }
 
     h1 {
@@ -31,27 +30,25 @@
       padding: 24px 0 20px 0;
       margin: 32px auto 0 auto;
       max-width: 900px;
-      /* Removed white background */
       border-radius: 18px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.3);  /* Adjusted shadow for visibility */
+      box-shadow: 0 8px 32px rgba(0,0,0,0.3);
       font-size: 3.5rem;
       font-weight: 700;
-      background: linear-gradient(90deg, black, #005f73);  /* Black to dark turquoise gradient */
+      background: linear-gradient(90deg, black, #005f73);
       -webkit-background-clip: text;
       background-clip: text;
-      color: transparent;  /* Transparent to show gradient */
+      color: transparent;
       letter-spacing: 0.5px;
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 10px;
-      /* Removed text-shadow for gradient effect */
     }
 
     h1::before {
       content: "🍴";
       font-size: 2rem;
-      color: black;  /* Black for the emoji */
+      color: black;
       margin-right: 8px;
     }
 
@@ -64,9 +61,8 @@
     }
 
     .container {
-      /* Removed white background */
       border-radius: 18px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.3);  /* Adjusted shadow */
+      box-shadow: 0 8px 32px rgba(0,0,0,0.3);
       padding: 40px 24px 32px 24px;
       max-width: 900px;
       width: 100%;
@@ -77,33 +73,34 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 28px;
-      contain: layout style;  /* Optimize layout containment */
+      contain: layout style;
+      /* Prevent edge touching on mobile */
+      box-sizing: border-box;
     }
 
     .shop-card {
-      flex: 1 1 45%;  /* Flexible width for better centering */
-      min-width: 300px;  /* Minimum width to prevent too small cards */
-      max-width: 432px;  /* Maximum width for large screens */
-      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);  /* Button color code applied */
+      flex: 1 1 340px;
+      min-width: 260px;
+      max-width: 400px;
+      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
       border-radius: 18px;
       box-shadow: 0 4px 16px rgba(0,0,0,0.3);
       overflow: hidden;
       text-align: center;
-      transition: none;  /* Removed transitions to eliminate stuttering */
       cursor: pointer;
       position: relative;
-      border: 2px solid #40E0D0;  /* Turquoise border */
+      border: 2px solid #40E0D0;
       display: flex;
       flex-direction: column;
       align-items: center;
-      color: white;  /* White text for contrast */
-      margin-left: -2mm;  /* Move cards left by 2mm on desktop */
-      /* Removed transform and will-change to prevent flickering */
+      color: white;
+      margin: 0;
+      transition: box-shadow 0.15s;
     }
 
     .shop-card:hover {
       box-shadow: 0 8px 24px rgba(0,0,0,0.4);
-      border-color: #00CED1;  /* Darker turquoise on hover */
+      border-color: #00CED1;
     }
 
     .shop-card img {
@@ -113,15 +110,14 @@
       object-position: top;
       border-top-left-radius: 18px;
       border-top-right-radius: 18px;
-      background: #f0f8ff;  /* Light turquoise tint for image background */
-      loading: lazy;  /* Lazy load images for better performance */
-      contain: layout;  /* Optimize image rendering */
-      aspect-ratio: 3 / 2;  /* Fixed aspect ratio to prevent layout shifts */
+      background: #f0f8ff;
+      aspect-ratio: 3 / 2;
+      display: block;
     }
 
     .shop-card h3 {
       margin: 16px 0 10px 0;
-      color: white;  /* White text */
+      color: white;
       font-size: 2rem;
       font-weight: 700;
       letter-spacing: 0.2px;
@@ -129,10 +125,18 @@
     }
 
     .shop-card p {
-      color: #ddd;  /* Light gray for description readability */
+      color: #ddd;
       padding: 0 16px 20px;
       font-size: 1rem;
       min-height: 48px;
+    }
+
+    @media (max-width: 900px) {
+      .container {
+        max-width: 98vw;
+        padding-left: 2vw;
+        padding-right: 2vw;
+      }
     }
 
     @media (max-width: 700px) {
@@ -142,25 +146,22 @@
         margin-top: 12px;
       }
       .container {
-        padding: 10px 4px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 12px;
+        padding: 10px 2vw;
+        gap: 16px;
+        max-width: 100vw;
       }
       .shop-card {
-        flex: 1 1 45%;  /* Flexible width for mobile centering */
-        min-width: 200px;
-        max-width: none;  /* Allow full width on mobile */
+        flex: 1 1 90vw;
+        min-width: 90vw;
+        max-width: 98vw;
         border-radius: 14px;
-        margin-left: -3mm;  /* Move cards left by 3mm on phone (1mm more than desktop) */
+        margin: 0 auto;
       }
       .shop-card img {
-        height: 150px;  /* Fixed height to prevent layout shifts */
-        object-fit: cover;
+        height: 150px;
         border-top-left-radius: 14px;
         border-top-right-radius: 14px;
-        aspect-ratio: 4 / 3;  /* Adjusted aspect ratio for mobile */
+        aspect-ratio: 4 / 3;
       }
       .shop-card h3 {
         font-size: 1.1rem;
@@ -174,14 +175,19 @@
     }
 
     @media (max-width: 500px) {
+      .container {
+        padding: 8px 2vw;
+        gap: 10px;
+      }
       .shop-card {
-        flex: 1 1 100%;  /* Full width on very small screens */
-        margin: 0;
-        margin-left: 0;  /* No shift needed for full width */
+        flex: 1 1 96vw;
+        min-width: 96vw;
+        max-width: 98vw;
+        margin: 0 auto;
       }
       .shop-card img {
-        height: 120px;  /* Smaller fixed height */
-        aspect-ratio: 5 / 3;  /* Adjusted for small screens */
+        height: 120px;
+        aspect-ratio: 5 / 3;
       }
     }
   </style>
@@ -208,24 +214,38 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
+    // Use requestAnimationFrame for smooth rendering
     const loadShops = async () => {
       const shopList = document.getElementById("shopList");
       const vendorsRef = collection(db, "vendors");
       const snapshot = await getDocs(vendorsRef);
 
-      // Build HTML string in one go to avoid multiple DOM manipulations
-      let html = '';
+      // Collect data first
+      const shops = [];
       snapshot.forEach(doc => {
         const data = doc.data();
-        html += `
-          <div class="shop-card" onclick="window.location.href='menu.html?vendor=${doc.id}'">
-            <img src="${data.imageURL || 'https://via.placeholder.com/300'}" alt="${data.name}" loading="lazy">
-            <h3>${data.name}</h3>
-            <p>${data.description || 'No description yet'}</p>
-          </div>
-        `;
+        shops.push({
+          id: doc.id,
+          name: data.name,
+          imageURL: data.imageURL,
+          description: data.description
+        });
       });
-      shopList.innerHTML = html;  // Single DOM update for smoothness
+
+      // Render all at once for best performance
+      requestAnimationFrame(() => {
+        let html = '';
+        shops.forEach(data => {
+          html += `
+            <div class="shop-card" onclick="window.location.href='menu.html?vendor=${data.id}'">
+              <img src="${data.imageURL || 'https://via.placeholder.com/300'}" alt="${data.name}" loading="lazy">
+              <h3>${data.name}</h3>
+              <p>${data.description || 'No description yet'}</p>
+            </div>
+          `;
+        });
+        shopList.innerHTML = html;
+      });
     };
 
     loadShops();
