--- a/menu.html
+++ b/menu.html
@@ -100,11 +100,15 @@
     }
     .container {
       width: 100%;
-      max-width: 500px; /* reduced width */
+      max-width: 500px;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
       gap: 0;
+      /* Prevent edge touching on mobile */
+      box-sizing: border-box;
+      padding-left: 12px;
+      padding-right: 12px;
     }
     .category-section {
       margin-bottom: 28px;
@@ -184,9 +188,9 @@
       color: #fff;
       border: none;
       border-radius: 50%;
-      width: 64px;      /* larger */
-      height: 64px;     /* larger */
-      font-size: 2.5rem;/* larger */
+      width: 64px;
+      height: 64px;
+      font-size: 2.5rem;
       font-weight: bold;
       cursor: pointer;
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
@@ -298,13 +302,13 @@
       bottom: 32px;
       right: 40px;
       z-index: 200;
-      font-size: 1.3rem; /* 0.5x smaller */
+      font-size: 1.3rem;
       background: #005f73;
       color: #fff;
       border: none;
       border-radius: 50%;
-      width: 35px;      /* 0.5x smaller */
-      height: 35px;     /* 0.5x smaller */
+      width: 35px;
+      height: 35px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
       cursor: pointer;
       display: flex;
@@ -339,6 +343,8 @@
       }
       .container {
         max-width: 98vw;
+        padding-left: 2vw;
+        padding-right: 2vw;
       }
       .menu-card {
         padding: 12px 6px;
@@ -385,6 +391,8 @@
       }
       .container {
         max-width: 100vw;
+        padding-left: 2vw;
+        padding-right: 2vw;
       }
       .menu-card {
         padding: 10px 2px;
