--- a/menu.html
+++ b/menu.html
@@ -188,9 +188,9 @@
       color: #fff;
       border: none;
       border-radius: 50%;
-      width: 64px;
-      height: 64px;
-      font-size: 2.5rem;
+      width: 56px;
+      height: 56px;
+      font-size: 2rem;
       font-weight: bold;
       cursor: pointer;
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
@@ -302,13 +302,13 @@
       bottom: 32px;
       right: 40px;
       z-index: 200;
-      font-size: 1.3rem;
+      font-size: 2.3rem;         /* Bigger than add icon */
       background: #005f73;
       color: #fff;
       border: none;
       border-radius: 50%;
-      width: 35px;
-      height: 35px;
+      width: 68px;
+      height: 68px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
       cursor: pointer;
       display: flex;
@@ -318,15 +318,15 @@
     #cart-badge {
       display: none;
       position: absolute;
-      top: 4px;
-      right: 4px;
+      top: 10px;
+      right: 10px;
       background: #ff5252;
       color: #fff;
       border-radius: 50%;
-      padding: 1px 5px;
-      font-size: 0.8rem;
+      padding: 1px 9px;
+      font-size: 1.1rem;
       font-weight: bold;
-      min-width: 16px;
+      min-width: 22px;
       text-align: center;
       line-height: 1;
       pointer-events: none;
@@ -360,24 +360,24 @@
       .menu-card button {
         width: 56px;
         height: 56px;
-        font-size: 2.1rem;
+        font-size: 2rem;
         margin-left: 6px;
       }
       .category-section .menu-card:last-child {
         margin-bottom: 0;
       }
       #cart-toggle-btn {
-        width: 30px;
-        height: 30px;
-        font-size: 1.1rem;
+        width: 54px;
+        height: 54px;
+        font-size: 1.7rem;
         bottom: 18px;
         right: 10px;
       }
       #cart-badge {
-        top: 2px;
-        right: 2px;
-        font-size: 0.7rem;
-        min-width: 13px;
+        top: 7px;
+        right: 7px;
+        font-size: 0.95rem;
+        min-width: 16px;
       }
     }
     @media (max-width: 500px) {
@@ -408,7 +408,7 @@
       .menu-card button {
         width: 48px;
         height: 48px;
-        font-size: 1.7rem;
+        font-size: 1.5rem;
         margin-left: 4px;
       }
       .category-section .menu-card:last-child {
@@ -419,17 +419,17 @@
         margin: 14px 0 6px 0;
       }
       #cart-toggle-btn {
-        width: 24px;
-        height: 24px;
-        font-size: 0.8rem;
+        width: 40px;
+        height: 40px;
+        font-size: 1.1rem;
         bottom: 10px;
         right: 5px;
       }
       #cart-badge {
-        top: 1px;
-        right: 1px;
-        font-size: 0.6rem;
-        min-width: 10px;
+        top: 3px;
+        right: 3px;
+        font-size: 0.8rem;
+        min-width: 12px;
       }
     }
   </style>
