--- a/menu.html
+++ b/menu.html
@@ -47,6 +47,32 @@
       letter-spacing: 0.5px;
       font-family: 'Roboto', Arial, sans-serif;
     }
+    .search-bar-container {
+      max-width: 900px;
+      margin: 18px auto 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 18px;
+    }
+    #search-bar {
+      width: 100%;
+      max-width: 400px;
+      padding: 10px 18px;
+      border-radius: 20px;
+      border: 1.5px solid #005f73;
+      font-size: 1.1rem;
+      font-family: 'Roboto', Arial, sans-serif;
+      outline: none;
+      margin-bottom: 8px;
+      background: #f7fafd;
+      color: #005f73;
+      transition: border 0.2s;
+    }
+    #search-bar:focus {
+      border: 2px solid #00aaff;
+      background: #fff;
+    }
     .category-bar {
       display: flex;
       overflow-x: auto;
@@ -105,7 +131,6 @@
       display: flex;
       flex-direction: column;
       gap: 0;
-      /* Prevent edge touching on mobile */
       box-sizing: border-box;
       padding-left: 12px;
       padding-right: 12px;
@@ -302,7 +327,7 @@
       bottom: 32px;
       right: 40px;
       z-index: 200;
-      font-size: 2.3rem;         /* Bigger than add icon */
+      font-size: 2.3rem;
       background: #005f73;
       color: #fff;
       border: none;
@@ -337,6 +362,13 @@
         font-size: 1.5rem;
         padding: 12px 0 10px 0;
         margin-top: 12px;
+      }
+      .search-bar-container {
+        padding: 0 2vw;
+      }
+      #search-bar {
+        max-width: 98vw;
+        font-size: 1rem;
       }
       .container-bg {
         padding: 10px 1vw 18px 1vw;
@@ -385,6 +417,13 @@
         font-size: 1.3rem;
         padding: 10px 0 8px 0;
         margin-top: 8px;
+      }
+      .search-bar-container {
+        padding: 0 1vw;
+      }
+      #search-bar {
+        max-width: 100vw;
+        font-size: 0.95rem;
       }
       .container-bg {
         padding: 6px 0 10px 0;
@@ -439,6 +478,9 @@
   <div class="lux-box">
     <span class="menu-title" id="menu-header">Menu</span>
   </div>
+  <div class="search-bar-container">
+    <input type="text" id="search-bar" placeholder="Search menu items..." autocomplete="off" />
+  </div>
   <div class="category-bar" id="category-bar"></div>
   <div class="container-bg">
     <div class="container" id="menu-container"></div>
@@ -476,6 +518,8 @@
 
     let cart = [];
     let categories = [];
+    let groupedMenu = {}; // Store all menu items grouped by category
+    let allMenuItems = []; // Flat array of all menu items
 
     async function setHeader() {
       if (!vendorId) {
@@ -573,16 +617,18 @@
       }
 
       // Group items by category
-      const grouped = {};
+      groupedMenu = {};
+      allMenuItems = [];
       snapshot.forEach(doc => {
         const data = doc.data();
         const category = data.category || 'Other';
-        if (!grouped[category]) grouped[category] = [];
-        grouped[category].push(data);
+        if (!groupedMenu[category]) groupedMenu[category] = [];
+        groupedMenu[category].push(data);
+        allMenuItems.push({ ...data, category });
       });
 
       // Sort categories: Put "Rice" or "Rice and Curry Options" first, then others alphabetically
-      categories = Object.keys(grouped).sort((a, b) => {
+      categories = Object.keys(groupedMenu).sort((a, b) => {
         const riceNames = ['rice', 'rice and curry options', 'rice options'];
         const aIsRice = riceNames.some(r => a.toLowerCase().includes(r));
         const bIsRice = riceNames.some(r => b.toLowerCase().includes(r));
@@ -591,15 +637,27 @@
         return a.localeCompare(b);
       });
 
-      // Render category bar
       renderCategoryBar(categories);
+      renderMenuSections(groupedMenu, categories);
+    }
 
-      // Render each category section
+    function renderMenuSections(grouped, cats, searchTerm = "") {
       const menuContainer = document.getElementById("menu-container");
       menuContainer.innerHTML = "";
-      for (const category of categories) {
+      let foundAny = false;
+      for (const category of cats) {
+        // Filter items by search term if provided
+        let items = grouped[category];
+        if (searchTerm) {
+          items = items.filter(item =>
+            (item.name && item.name.toLowerCase().includes(searchTerm)) ||
+            (item.category && item.category.toLowerCase().includes(searchTerm))
+          );
+        }
+        if (!items.length) continue;
+
         // Sort items within category: For Rice, put "Nasi Putih" first, then alphabetical
-        grouped[category].sort((a, b) => {
+        items.sort((a, b) => {
           if (category.toLowerCase().includes('rice')) {
             if (a.name.toLowerCase().includes('nasi putih')) return -1;
             if (b.name.toLowerCase().includes('nasi putih')) return 1;
@@ -611,11 +669,15 @@
         catDiv.className = "category-section";
         catDiv.id = `cat-${category.replace(/\s+/g, '-')}`;
         catDiv.innerHTML = `<h2 class="category-title">${category}</h2>`;
-        grouped[category].forEach(item => {
+        items.forEach(item => {
           const card = renderMenuItem(item);
           catDiv.appendChild(card);
         });
         menuContainer.appendChild(catDiv);
+        foundAny = true;
+      }
+      if (!foundAny) {
+        menuContainer.innerHTML = "<p>No menu items match your search.</p>";
       }
     }
 
@@ -665,6 +727,13 @@
     });
     cartSection.style.display = "none";
     updateCartBadge();
+
+    // Search bar logic
+    const searchBar = document.getElementById("search-bar");
+    searchBar.addEventListener("input", function() {
+      const searchTerm = this.value.trim().toLowerCase();
+      renderMenuSections(groupedMenu, categories, searchTerm);
+    });
   </script>
 </body>
 </html>
