--- a/menu-management.html
+++ b/menu-management.html
@@ -26,23 +26,90 @@
       font-size: 1.8rem;
       color: #007bff;
     }
+    .category-section {
+      margin: 32px auto 0 auto;
+      max-width: 700px;
+      background: #fff;
+      border-radius: 18px;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.07);
+      padding: 18px 18px 8px 18px;
+    }
+    .category-title {
+      font-size: 1.3rem;
+      font-weight: 700;
+      color: #005f73;
+      margin: 0 0 18px 0;
+      background: linear-gradient(90deg, black, #005f73);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      letter-spacing: 0.3px;
+    }
     .menu-item {
-      background: white;
+      background: #f7fafd;
       padding: 1rem;
-      margin: 1rem auto;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      max-width: 600px;
+      margin: 0 0 18px 0;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.07);
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      gap: 18px;
+      transition: background 0.2s;
+      position: relative;
     }
-    .menu-item label {
+    .menu-item.unavailable {
+      opacity: 0.5;
+      background: #fbe9e7;
+    }
+    .menu-item img {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      border-radius: 10px;
+      background: #e3eafc;
+      box-shadow: 0 2px 8px rgba(31,38,135,0.08);
+      flex-shrink: 0;
+      aspect-ratio: 1 / 1;
+      margin: 0;
+      display: block;
+    }
+    .menu-details {
       flex: 1;
-      font-weight: 500;
+      display: flex;
+      flex-direction: column;
+      min-width: 0;
     }
-    .menu-item input[type="checkbox"] {
-      transform: scale(1.2);
+    .menu-details h3 {
+      margin: 0 0 4px 0;
+      color: #005f73;
+      font-size: 1.1rem;
+      font-weight: 700;
+      letter-spacing: 0.2px;
+      white-space: normal;
+      word-break: break-word;
+    }
+    .menu-details p {
+      margin: 0;
+      color: #333;
+      font-size: 1rem;
+    }
+    .menu-actions {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 8px;
+      min-width: 90px;
+    }
+    .menu-actions label {
+      font-size: 0.95rem;
+      color: #005f73;
+      font-weight: 500;
+      margin-bottom: 2px;
+    }
+    .menu-actions input[type="checkbox"] {
+      transform: scale(1.3);
+      margin-bottom: 2px;
+      accent-color: #00aaff;
     }
     .back {
       text-align: center;
@@ -56,6 +123,29 @@
       color: white;
       font-weight: bold;
       cursor: pointer;
+    }
+    @media (max-width: 700px) {
+      .category-section {
+        max-width: 98vw;
+        padding: 10px 2vw 8px 2vw;
+      }
+      .menu-item img {
+        width: 60px;
+        height: 60px;
+      }
+    }
+    @media (max-width: 500px) {
+      .category-section {
+        max-width: 100vw;
+        padding: 6px 0 6px 0;
+      }
+      .menu-item img {
+        width: 48px;
+        height: 48px;
+      }
+      .menu-details h3 {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
@@ -71,8 +161,8 @@
 
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-    import { getFirestore, collection, query, where, onSnapshot, updateDoc, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
-    import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
+    import { getFirestore, collection, query, onSnapshot, updateDoc, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
+    import { getAuth, onAuthStateChanged, setPersistence, browserLocalPersistence } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyBQZrBURFwenjWEEnQMMIH7sOSqPq0Qtx0",
@@ -80,13 +170,16 @@
       projectId: "unm-caf-orders",
       storageBucket: "unm-caf-orders.appspot.com",
       messagingSenderId: "562096834985",
-      appId: "1:562096834985:web:f4fbe451e5482521e49cb8",
+      appId: "1:562096834985:web:f4bfe451e5482521e49cb8",
       measurementId: "G-J12PBDK7N1"
     };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
     const auth = getAuth(app);
+
+    // Ensure session persists across tabs and reloads
+    setPersistence(auth, browserLocalPersistence);
 
     const urlParams = new URLSearchParams(window.location.search);
     const vendorId = urlParams.get("vendor");
@@ -104,28 +197,85 @@
       }
     }
 
-    // Render menu items
-    function renderMenuItem(docSnap) {
-      const data = docSnap.data();
-      const div = document.createElement("div");
-      div.className = "menu-item";
+    // Render menu items grouped by category (if category exists)
+    function renderMenuByCategory(menuDocs) {
+      menuContainer.innerHTML = "";
+      // Group by category
+      const grouped = {};
+      menuDocs.forEach(docSnap => {
+        const data = docSnap.data();
+        const category = data.category || "Other";
+        if (!grouped[category]) grouped[category] = [];
+        grouped[category].push({ docSnap, data });
+      });
 
+      // Sort categories: Rice first, then alphabetical
+      const categories = Object.keys(grouped).sort((a, b) => {
+        const riceNames = ['rice', 'rice and curry options', 'rice options'];
+        const aIsRice = riceNames.some(r => a.toLowerCase().includes(r));
+        const bIsRice = riceNames.some(r => b.toLowerCase().includes(r));
+        if (aIsRice && !bIsRice) return -1;
+        if (!aIsRice && bIsRice) return 1;
+        return a.localeCompare(b);
+      });
+
+      categories.forEach(category => {
+        const section = document.createElement("div");
+        section.className = "category-section";
+        section.innerHTML = `<div class="category-title">${category}</div>`;
+        // Sort items: for Rice, Nasi Putih first, then alphabetical
+        grouped[category].sort((a, b) => {
+          if (category.toLowerCase().includes('rice')) {
+            if (a.data.name && a.data.name.toLowerCase().includes('nasi putih')) return -1;
+            if (b.data.name && b.data.name.toLowerCase().includes('nasi putih')) return 1;
+          }
+          return (a.data.name || '').localeCompare(b.data.name || '');
+        });
+        grouped[category].forEach(({ docSnap, data }) => {
+          section.appendChild(renderMenuItem(docSnap, data));
+        });
+        menuContainer.appendChild(section);
+      });
+    }
+
+    // Render a single menu item
+    function renderMenuItem(docSnap, data) {
+      const div = document.createElement("div");
+      div.className = "menu-item" + (data.available === false ? " unavailable" : "");
+
+      const img = document.createElement("img");
+      img.src = data.imageURL || "https://via.placeholder.com/200x140";
+      img.alt = data.name;
+
+      const details = document.createElement("div");
+      details.className = "menu-details";
+      details.innerHTML = `
+        <h3>${data.name || "Unnamed Item"}</h3>
+        <p>RM ${parseFloat(data.price).toFixed(2)}</p>
+      `;
+
+      const actions = document.createElement("div");
+      actions.className = "menu-actions";
+      const label = document.createElement("label");
+      label.textContent = "Available";
       const checkbox = document.createElement("input");
       checkbox.type = "checkbox";
-      checkbox.checked = data.available !== false; // Default to true if not set
+      checkbox.checked = data.available !== false;
       checkbox.addEventListener("change", async () => {
         try {
           await updateDoc(docSnap.ref, { available: checkbox.checked });
-          console.log("Menu availability updated");
         } catch (error) {
-          console.error("Update failed:", error);
           alert("Failed to update availability.");
         }
       });
+      actions.appendChild(label);
+      actions.appendChild(checkbox);
 
-      div.innerHTML = `<label>${data.name} - RM ${data.price.toFixed(2)}</label>`;
-      div.appendChild(checkbox);
-      menuContainer.appendChild(div);
+      div.appendChild(img);
+      div.appendChild(details);
+      div.appendChild(actions);
+
+      return div;
     }
 
     // Listen for menu items
@@ -135,13 +285,12 @@
         window.location.href = "vendor-login.html";
         return;
       }
-
-      const q = query(collection(db, "vendors", vendorId, "menus"));  // Updated to subcollection
+      const q = query(collection(db, "vendors", vendorId, "menus"));
       onSnapshot(q, (snapshot) => {
-        menuContainer.innerHTML = "";
-        snapshot.forEach(doc => renderMenuItem(doc));
+        const docs = [];
+        snapshot.forEach(doc => docs.push(doc));
+        renderMenuByCategory(docs);
       });
-
       loadVendorInfo();
     });
   </script>
